feat: Add bill record page with category selection
Introduces a new page for recording bills, allowing users to select transaction type (expense/income), specify an amount, and choose a category. Includes mock data for categories and accounts.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     "axios": "https://esm.sh/axios@^1.6.7",
     "antd-mobile": "https://esm.sh/antd-mobile@^5.35.0",
     "classnames": "https://esm.sh/classnames@^2.5.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "antd-mobile-icons": "https://esm.sh/antd-mobile-icons@^0.3.0"
   }
 }
 </script>
